Fix some punctuation issues
Signed-off-by: Liang Zhang <psychelzh@outlook.com>

--- a/01.qmd
+++ b/01.qmd
@@ -13,7 +13,7 @@
 
 从专业的角度来说，博士学位意味着你做过相当多的研究，将之写成论文，并和专业的学者进行过讨论。这一切都可以证明你有独立做研究的能力。虽然有导师的帮助和建议，但至少从理论上来讲，博士项目是一项由你自己做主的工程。
 
-另外博士学位的取得，相当于你通过了学术界的入会测试。因为这表明你经历过严峻考验，并且较好地通过了这个严峻考验，从而正式被批准成为学术界的一员。以此类推，尽管有博士学位并不足以让你成为一个学术带头人，但它至少标志你已经正式“成年”了。当你获得博士学位后，人们对待你的方式就发生了细微的变化，你会明显感觉到已经是“他们中的一员”了。渐渐地，你会注意到你看待事物的思维方式慢慢不同了（对待院系的本科教学计划的方式就是一个很好的例子）。在制订教学计划的时候，拥有博士学位的老师通常希望通过这个计划教会学生如何做研究，而未获得博士学位的老师则更多地把这个计划看作培养学生职业能力的机会。前者的观点是，作为他们将来人生中一项颇为重要的技能，培养学生的批判性思维是必要的；后者则认为这种观点纯属不切实际的胡说八道，在他们看来，需要做的是训练学生的职业技能，让学生毕业后能尽快找到工作。究竟谁的观点才是正确的呢？这是个好问题，但讨论这个问题可能岔开正题口总而言之，最为重要的一点是，攻读博士学位确实会改变你。
+另外博士学位的取得，相当于你通过了学术界的入会测试。因为这表明你经历过严峻考验，并且较好地通过了这个严峻考验，从而正式被批准成为学术界的一员。以此类推，尽管有博士学位并不足以让你成为一个学术带头人，但它至少标志你已经正式“成年”了。当你获得博士学位后，人们对待你的方式就发生了细微的变化，你会明显感觉到已经是“他们中的一员”了。渐渐地，你会注意到你看待事物的思维方式慢慢不同了（对待院系的本科教学计划的方式就是一个很好的例子）。在制订教学计划的时候，拥有博士学位的老师通常希望通过这个计划教会学生如何做研究，而未获得博士学位的老师则更多地把这个计划看作培养学生职业能力的机会。前者的观点是，作为他们将来人生中一项颇为重要的技能，培养学生的批判性思维是必要的；后者则认为这种观点纯属不切实际的胡说八道，在他们看来，需要做的是训练学生的职业技能，让学生毕业后能尽快找到工作。究竟谁的观点才是正确的呢？这是个好问题，但讨论这个问题可能岔开正题。总而言之，最为重要的一点是，攻读博士学位确实会改变你。
 
 ## 取得博士学位的标准流程
 
@@ -114,7 +114,7 @@
 |                                     | 熟悉自己所在专业的文献，当然，要制作这样一份目录，       |
 |                                     | 学生们首先要读足够多的书。                               |
 +-------------------------------------+----------------------------------------------------------+
-| 写，再写，反复写                    |                                                          | 
+| 写，再写，反复写                    |                                                          |
 |                                     | - 写作是熟能生巧的一项技能：写得越多。写起来也就越容易。 |
 |                                     | - 在写作的时候应该以出版为目的，也就是要成文，这样做的   |
 |                                     |   好处之一首先是可以为将来的修订带来不少便利，其次是如果 |
