--- a/06.qmd
+++ b/06.qmd
@@ -32,7 +32,7 @@
 
 ## 文献综述
 
-学术文章或论文一般都是以文献综述开始的口有很多原因可以解释这种安排。
+学术文章或论文一般都是以文献综述开始的。有很多原因可以解释这种安排。
 
 一个显而易见的原因是为论文将要涉及的研究工作进行铺垫（比如告诉读者前人已经做了哪些工作）。引用前人的研究要采用标准的引用格式，以方便感兴趣的和持怀疑意见的读者查找原文出处，与文献综述的内容作对照。第二个原因也同样重要，那就是通过文献综述证明你已经系统地做了相关研究，让读者相信读你的论文不会是浪费时间。
 
