--- a/12.qmd
+++ b/12.qmd
@@ -50,7 +50,7 @@
 
 你在陈述报告开始前常会先介绍自己，一般情况下你会向听众展示一张写有你姓名和所在院校的幻灯片，你可以借此机会调整设备的焦距，并给自己找到一个合适的站立位置。最典型的错误是站在观众和你的幻灯片之间，因为这样会使你自己的阴影投射到屏幕上，同时幻灯片上的表格又会投射到你整张脸上。你应该形成习惯站在屏幕的一侧，并利用自己的阴影来指示幻灯片上的部分内容。
 
-新手往往会试图在一张幻灯片上写尽可能多的内容口你应该使用大号字体，以便坐在后排的人也能看清。同时你的幻灯片上必须要留出部分空白，使观众们不至于被过于密集的信息吓倒。值得推荐的做法是在幻灯片上就关键概念列出要点句，然后通过报告去解释这些要点句，而不是念幻灯片上的语句。
+新手往往会试图在一张幻灯片上写尽可能多的内容。你应该使用大号字体，以便坐在后排的人也能看清。同时你的幻灯片上必须要留出部分空白，使观众们不至于被过于密集的信息吓倒。值得推荐的做法是在幻灯片上就关键概念列出要点句，然后通过报告去解释这些要点句，而不是念幻灯片上的语句。
 
 表格是口头陈述报告过程中经常出问题的环节：表格里的数字一般比较小，坐在最后一排的观众往往看不清楚。所以你应该在事先检查一下幻灯片的清晰度和大小。另一个值得推荐的做法是给听众发讲义来补充幻灯片的内容——大多数的听众喜欢一页涵盖所有关键点的总结材料加上一份所有幻灯片内容的复印件。幻灯片内容在纸上的尺寸应该便于听众们在上面记笔记。
 
