--- a/14.qmd
+++ b/14.qmd
@@ -14,9 +14,9 @@
 
 ### 啄木鸟的故事
 
-安全头盔的开发者们决定到自然中寻找新设计方案的灵感。他们中的一个人想知道是否有某种动物，在头部经受了有力打击之后，还不会感到痛苦或者遭遇脑损伤。灵感来了，是啄木鸟。在啄木鸟醒着的时候，它大量的时间都用在用相当大的力量来敲击树木，这样会对头部造成撞击。小组因此研究啄木鸟的身体结构，发现在头和喙相连的部分有海绵状器官，吸收了部分撞击的力量。小组应用这一灵感设计出一款头盔，此设计不是为防止物体击穿头盔，而是通过将头盔变形的方式，将头盔设计为可以吸收来自突然袭击的力董，吸收正在朝向佩戴者头部的大量能量。设计者很自豪地展示了他们的设计理念。故事中，在这个时候，观众中的一员问：“你怎么就知道啄木鸟不会头疼呢？”接下来就是痛苦的沉默。
+安全头盔的开发者们决定到自然中寻找新设计方案的灵感。他们中的一个人想知道是否有某种动物，在头部经受了有力打击之后，还不会感到痛苦或者遭遇脑损伤。灵感来了，是啄木鸟。在啄木鸟醒着的时候，它大量的时间都用在用相当大的力量来敲击树木，这样会对头部造成撞击。小组因此研究啄木鸟的身体结构，发现在头和喙相连的部分有海绵状器官，吸收了部分撞击的力量。小组应用这一灵感设计出一款头盔，此设计不是为防止物体击穿头盔，而是通过将头盔变形的方式，将头盔设计为可以吸收来自突然袭击的力量，吸收正在朝向佩戴者头部的大量能量。设计者很自豪地展示了他们的设计理念。故事中，在这个时候，观众中的一员问：“你怎么就知道啄木鸟不会头疼呢？”接下来就是痛苦的沉默。
 
-在蘑菇的故事中，学生没能识别出相关的变量（中央供暖）。在啄木鸟的故事中，设计小组没有检测关键性假设（啄木鸟不会脑损伤）。事实上，啄木鸟的故事有一个很好的结局，现有的设计被证明是好的，设计者是对的，尽管如此，就我们所知，还没有人检测到啄木鸟的脑损伤率口然而，在另一个案例中，未经检验的假设导致数年时间浪费在无意义的研究上，这么长的时间本可以用在更有用的研究领域。
+在蘑菇的故事中，学生没能识别出相关的变量（中央供暖）。在啄木鸟的故事中，设计小组没有检测关键性假设（啄木鸟不会脑损伤）。事实上，啄木鸟的故事有一个很好的结局，现有的设计被证明是好的，设计者是对的，尽管如此，就我们所知，还没有人检测到啄木鸟的脑损伤率。然而，在另一个案例中，未经检验的假设导致数年时间浪费在无意义的研究上，这么长的时间本可以用在更有用的研究领域。
 
 大多数学生都会收集答辩的恐怖故事，这些故事使他们噩梦不断。在我们的经历中，答辩中遭受失败的人是很少的，而且失败似乎只归咎于两件事情：
 
@@ -127,7 +127,7 @@
 
 ## 答辩的一些注意事项
 
-尽管答辩很神圣，到你到达答辩的时候，你已经完成了最艰难的部分。记住一点：答辩的结果只有通过和不通过。大多数考官都在寻找一个理由让博士候选者通过。你的工作就是让他们的寻找变得容易口完美不需要，但能力必须有。
+尽管答辩很神圣，到你到达答辩的时候，你已经完成了最艰难的部分。记住一点：答辩的结果只有通过和不通过。大多数考官都在寻找一个理由让博士候选者通过。你的工作就是让他们的寻找变得容易。完美不需要，但能力必须有。
 
 ### 你在答辩中做什么？
 
