--- a/15.qmd
+++ b/15.qmd
@@ -39,7 +39,7 @@
 
 我们将略过后勤保障过程而将精力集中在有关的文章和论文集上。如果你正组织一个出版论文集的学术会议，那么你就需要与出版商取得联系，这能迅速提升参与者的兴趣。同时也需要提出限制有关字数长短、截稿日期等的内容的要求。出版商们有其工作的统一要求而不是为某客户定制规则。因此，如果你由于没有准备好论文副本，错过了一个出版时间，你就需要再找另外一家。这会让你花更多的钱。因此你要确保演讲者能够及时地提供正确版本。对于许多学术会议，论文集在大会之前就已经印好了，以便于代表们听演讲的同时有论文集可看。这就有确定的截稿日期，因此，作为一名组织茬你不会同情不能及时提交论文或者没有以正确的格式通过电子邮件提交的作者们。
 
-在正常情况下讨论是按时段分批进行的这些时段为：大清早到早间咖啡时间；早间咖啡到午饭前；午饭到下午茶；下午茶到本日结束。每一组都会有各组织者中来协调，每一组通常会有一个综述性的介绍，或者由一位特邀嘉宾的演讲开始。这些讨论还可能超时，可能因为代表们在开会前还在拖拖拉拉以至于不得不推迟开始时间。也可能因为设备发生了问题，还有就是演讲者多说了三两分钟一对一个人来说不是一个大事，但是每个人都拖二三分钟，影响就扩大了口每场都会包括至少一位说话让人听不见、听不懂、枯燥乏味或者带了放不出来的幻灯片的演讲者。
+在正常情况下讨论是按时段分批进行的这些时段为：大清早到早间咖啡时间；早间咖啡到午饭前；午饭到下午茶；下午茶到本日结束。每一组都会有各组织者中来协调，每一组通常会有一个综述性的介绍，或者由一位特邀嘉宾的演讲开始。这些讨论还可能超时，可能因为代表们在开会前还在拖拖拉拉以至于不得不推迟开始时间。也可能因为设备发生了问题，还有就是演讲者多说了三两分钟一对一个人来说不是一个大事，但是每个人都拖二三分钟，影响就扩大了。每场都会包括至少一位说话让人听不见、听不懂、枯燥乏味或者带了放不出来的幻灯片的演讲者。
 
 作为一个参会者，这种情况显而易见对你有负面影响，但是让人惊讶的是没几个参会者会严肃对待这些事情。我们的建议是：
 
